log
Thu May  5 15:29:13 UTC 2022: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:15: error: ‘new’ is used uninitialized in this function [-Werror=uninitialized]
    new->capac = 3;
    ~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3cca8f4
Thu May  5 15:29:56 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d01d724
Thu May  5 15:33:19 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0d6e842
Thu May  5 15:33:39 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:37:4: error: conversion to non-scalar type requested
    Heap * new = (Heap) malloc (sizeof(Heap));
    ^~~~
heap.c:40:4: error: conversion to non-scalar type requested
    new->heapArray = (heapElem) malloc (sizeof(heapElem));
    ^~~
Compilation failed
39409df
Thu May  5 15:33:58 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
05a1735
Thu May  5 15:37:00 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7accfc7
Thu May  5 15:39:21 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
b7decd0
Thu May  5 15:42:16 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if (pq->capac = 0) return NULL;
         ^~
cc1: all warnings being treated as errors
Compilation failed
46f16b5
Thu May  5 15:47:41 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
a458647
Thu May  5 15:48:17 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b7aaf6a
Sat May  7 18:21:15 UTC 2022: 
 heap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
9b99e78
Sat May  7 19:03:11 UTC 2022: 
 heap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_pop’:
heap.c:69:6: error: ‘pq’ is a pointer; did you mean to use ‘->’?
    pq.size--
      ^
      ->
heap.c:71:1: error: expected ‘;’ before ‘}’ token
 }
 ^
Compilation failed
dc07cfa
Sat May  7 19:03:21 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_pop’:
heap.c:69:6: error: ‘pq’ is a pointer; did you mean to use ‘->’?
    pq.size--;
      ^
      ->
Compilation failed
7c451d6
Sat May  7 19:03:33 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
dcfca72
Sat May  7 19:04:17 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
bdcd970
Mon May  9 01:01:52 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
43edb58
